force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Compliance__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Compliance__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compliance</label>
    <type>Checkbox</type>
</CustomField>