force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Date__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Date__c</fullName>
    <label>Date</label>
    <type>Date</type>
</CustomField>