force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__DateTime__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__DateTime__c</fullName>
    <label>Date Time</label>
    <type>DateTime</type>
</CustomField>