force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__DemoTime__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__DemoTime__c</fullName>
    <label>DemoTime</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>