force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Duration__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Duration__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>