force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__From__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__From__c</fullName>
    <description>Email from(email only)</description>
    <label>From</label>
    <type>Email</type>
</CustomField>