force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__IsCadence__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__IsCadence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cadence</label>
    <type>Checkbox</type>
</CustomField>