force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__IsReply__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__IsReply__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reply</label>
    <type>Checkbox</type>
</CustomField>