force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__StartTime__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__StartTime__c</fullName>
    <label>StartTime</label>
    <type>DateTime</type>
</CustomField>