force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Subject__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Subject__c</fullName>
    <label>Subject</label>
    <length>255</length>
    <type>Text</type>
</CustomField>