force-app/main/default/objects/affectlayer__Engagement__c/fields/affectlayer__Type__c.field-meta.xml
<CustomField>
    <fullName>affectlayer__Type__c</fullName>
    <description>Recording/Email</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recording</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>